# madd2

./: .clang-format  .clang-tidy  .gitignore  .mailmap  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: reviewer_config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: prvalidation.yml
include/: CMakeLists.txt  changeset.h  component_heap.h  component_heap_iterator_base.h  ecs.h  entity.h  heap_entry.h  madd.h  madd_base.h  maybe.h  status.h  system.h  types.h
libraries/: CMakeLists.txt
src/: CMakeLists.txt  component_heap.cpp  component_heap_iterator.cpp  component_heap_iterator_base.cpp  heap_entry.cpp  madd.cpp  status.cpp
tests/: CMakeLists.txt  base_test_types.h  component_heap.test.cpp  component_heap_iterator.test.cpp  heap_entry.test.cpp  madd.test.cpp  status.test.cpp
